<resources>
    <string name="app_name">Android with Kotlin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="hello">Hello, </string>
    <string name="name">Name</string>
    <string name="last_price">Last Price</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="insert">Insert</string>
    <string name="row">Row</string>
</resources>